@@ -1,6 +1,7 @@
 Revision history for Lingua-Word-Parser
 
 {{$NEXT}}
+    - Added the extra-handy score_parts() method.
 
 0.0301 2015-06-05
     - Improved documentation 
